# Robofire_Car

./: README.md
chassis_bringup/: CMakeLists.txt  package.xml  robot_udev.sh
chassis_bringup/config/: ekf.yaml  ekf_carto.yaml
chassis_bringup/include/: chassis_bringup
chassis_bringup/include/turn_on_wheeltec_robot/: Quaternion_Solution.h  chassis_bringup.h
chassis_bringup/launch/: base_serial.launch.py  bringup.launch.py  bringup_node.launch.py
chassis_bringup/launch/include/: base_serial_h30imu.launch.py  turn_on_wheeltec_robot_h30imu.launch.py
chassis_bringup/scripts/: livox_perf_monitor.py
chassis_bringup/src/: Quaternion_Solution.cpp  chassis_bringup copy.cpp  chassis_bringup.cpp  test.py
elevation_mapping_ros2/elevation_mapping/: CMakeLists.txt  package.xml
elevation_mapping_ros2/elevation_mapping/include/elevation_mapping/: ElevationMap.hpp  ElevationMapping.hpp
elevation_mapping_ros2/elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp  elevation_mapping_node.cpp
elevation_mapping_ros2/elevation_mapping/src/input_sources/: Input.cpp  InputSourceManager.cpp
elevation_mapping_ros2/elevation_mapping_livox_lidar/: CMakeLists.txt  package.xml
elevation_mapping_ros2/elevation_mapping_livox_lidar/config/elevation_mapping/: livox_map.yaml  livox_robot.yaml  postprocessor_pipeline.yaml
elevation_mapping_ros2/elevation_mapping_livox_lidar/docs/: README_ROS2.md  elevation_mapping_guide.md
elevation_mapping_ros2/elevation_mapping_livox_lidar/launch/: livox_elevation_mapping.launch.py
elevation_mapping_ros2/elevation_mapping_livox_lidar/rviz/: elevation_map_visualization.rviz  livox_elevation_mapping.rviz
elevation_mapping_ros2/elevation_mapping_livox_lidar/scripts/: tf_to_pose_publisher.py  voxel_grid_filter.py
fast_lio/config/: compute_R.py  mid360.yaml
fast_lio/include/: common_lib.h
fast_lio/rviz/: fastlio.rviz
fast_lio/src/: laserMapping.cpp
livox_to_pointcloud2/: README.md
livox_to_pointcloud2/src/: livox_to_pointcloud2_ros1.cpp  livox_to_pointcloud2_ros2.cpp
my_interfaces/: CMakeLists.txt  package.xml
nav2_wrapper/: CMakeLists.txt  package.xml
nav2_wrapper/launch/: bringup_rm_navigation.py  navigation_launch.py  rviz_launch.py
nav2_wrapper/rviz/: nav2.rviz
pcd2pgm/config/: pcd2pgm.yaml
pcd2pgm/launch/: pcd2pgm_launch.py
pcd2pgm/rviz/: pcd2pgm.rviz
rm_nav_bringup/config/simulation/: fastlio_mid360_sim.yaml
rm_nav_bringup/launch/: navigation.launch .py
rm_navigation/rm_navigation/rviz/: nav2.rviz
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/PCD/: home.pcd  map.pcd  test.pcd
robot_navigation/config/: fastlio_mid360.yaml  nav2_params.yaml  wp.csv
robot_navigation/config/reality/: fastlio_mid360_real.yaml
robot_navigation/config/simulation/: fastlio_mid360_sim.yaml  nav2_params_elevation_sim.yaml  nav2_params_sim.yaml  segmentation_sim.yaml
robot_navigation/launch/: bringup_all.launch  copy.py  bringup_real.launch.py  bringup_sim.launch.py  navigation.launch.py  navigation_elevation.launch.py
robot_navigation/map/: grid_map.pgm  grid_map.yaml
robot_navigation/rviz/: fastlio.rviz
robot_navigation/scripts/: amcl_nomotion_trigger.py  pointcloud_throttle.py  sim_odom_bridge.py
robot_navigation/src/: elevation_to_costmap_node.cpp
robot_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/launch/: segmentation.launch.py  segmentation_params.yaml
robot_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc
robot_perception/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
robot_simulation/gz_simulation/: CMakeLists.txt  package.xml
robot_simulation/gz_simulation/launch/: empty_world.launch.py  robot2_spawn.launch.py  robot_spawn.launch.py  simulation.launch.py
robot_simulation/gz_simulation/models/autogen_terrain/: model.sdf
robot_simulation/gz_simulation/models/terrain_heightmap/: model.config  model.sdf  terrain_optimized.dae
robot_simulation/gz_simulation/models/terrain_heightmap/materials/scripts/: flat_gray copy.material
robot_simulation/gz_simulation/models/wall/: model.sdf
robot_simulation/gz_simulation/urdf/: mecu_depth_camera.xacro  simulation_waking_robot.xacro
robot_simulation/gz_simulation/worlds/: 3d_terrain_world.world  autogen_world.world  flat_ground.world  terrain_world.world
wheeltec_robot_urdf/urdf/: mini_mec_robot.urdf
